[package]
name = "smarthy"
version = "0.1.0"
edition = "2024"

[dependencies]
smarthy-engine = { workspace = true }
tokio = {workspace = true}

[workspace.dependencies]
smarthy-engine = { path = "smarthy-engine" }
tokio = {version = "1.49.0", features = ["full"]}


[workspace]
members = [
    "smarthy-engine",
]
