[package]
name = "smarthy"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3.22", features = ["local-time", "env-filter"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
config = { version = "0.15.19" }

smarthy-engine = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }

[workspace.dependencies]
smarthy-engine = { path = "smarthy-engine" }
log = "0.4.29"
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["default", "derive"] }

[workspace]
members = [
    "smarthy-engine",
]
